--- a/web_test/bootstrap/index1.html
+++ b/web_test/bootstrap/index1.html
@@ -19,11 +19,69 @@
     <![endif]-->
 </head>
 <body>
+
+<div class="container show-grid">
+    <div class="row">
+        <div class="col-md-3">.col-md-1</div>
+        <div class="col-md-9">.col-md-1</div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-3">
+            .col-md-1
+            .col-md-1
+            .col-md-1
+            .col-md-1
+            .col-md-1
+            .col-md-1
+            .col-md-1
+            .col-md-1
+        </div>
+        <div class="col-xs-9">.col-md-1</div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-3">.col-md-1</div>
+        <div class="col-md-7  col-md-offset-2">.col-md-1</div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-6  col-md-offset-3">.col-md-1</div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="row">
+                <div class="col-md-6">
+                    <diw class="row">
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4"></div>
+                        <div class="col-md-4"></div>
+                    </diw>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-9 col-md-push-3">.col-md-9 .col-md-push-3</div>
+        <div class="col-md-3 col-md-pull-9">.col-md-3 .col-md-pull-9</div>
+    </div>
+
+    <div class="row">
+        <div class="col-xs-6 col-sm-3 hidden-xs">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aut deleniti dolorum excepturi ipsa ipsam laudantium non perferendis tenetur ut! Accusamus animi, assumenda at exercitationem hic iste laboriosam molestiae nulla pariatur quis ratione rem saepe temporibus tenetur veniam veritatis voluptates. Asperiores beatae eos nemo nesciunt nisi numquam similique suscipit totam.</div>
+        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+
+        <!-- Add the extra clearfix for only the required viewport -->
+        <div class="clearfix visible-xs-block"></div>
+
+        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+        <div class="col-xs-6 col-sm-3">.col-xs-6 .col-sm-3</div>
+    </div>
     
     <nav class="navbar navbar-default" role="navigation">
     	<!-- Brand and toggle get grouped for better mobile display -->
     	<div class="navbar-header">
-    		<button type="button" class="navbar-toggle" data-toggle="modal" data-target="#modal-id">
+    		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
     			<span class="sr-only">Toggle navigation</span>
     			<span class="icon-bar"></span>
     			<span class="icon-bar"></span>
@@ -33,7 +91,7 @@
     	</div>
     </nav>
 
-    <a class="btn btn-primary" data-toggle="modal" href="#modal-id">Trigger modal</a>
+    <a class="btn btn-primary" data-toggle="modal" href="modal-id">Trigger modal</a>
     <div class="modal fade" id="modal-id">
     	<div class="modal-dialog">
     		<div class="modal-content">
@@ -51,6 +109,8 @@
     		</div><!-- /.modal-content -->
     	</div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+
+</div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
