--- a/web_test/bootstrap/index.html
+++ b/web_test/bootstrap/index.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-default" role="navigation">
     	<!-- Brand and toggle get grouped for better mobile display -->
     	<div class="navbar-header">
-    		<button type="button" class="navbar-toggle" data-toggle="modal" data-target="#modal-id">
+    		<button type="button" class="navbar-toggle" data-toggle="modal" data-target="#modal_sidebar">
     			<span class="sr-only">Toggle navigation</span>
     			<span class="icon-bar"></span>
     			<span class="icon-bar"></span>
@@ -33,8 +33,7 @@
     	</div>
     </nav>
 
-    <a class="btn btn-primary" data-toggle="modal" href="#modal-id">Trigger modal</a>
-    <div class="modal fade" id="modal-id">
+    <div class="modal fade" id="modal_sidebar">
     	<div class="modal-dialog">
     		<div class="modal-content">
     			<div class="modal-header">
@@ -42,7 +41,17 @@
     				<h4 class="modal-title">Modal title</h4>
     			</div>
     			<div class="modal-body">
-    				Modal body ...
+                    <ul class="list-group">
+                        <li class="list-group-item">Item 1</li>
+                        <li class="list-group-item">Item 2</li>
+                        <li class="list-group-item">Item 3</li>
+                        <li class="list-group-item">Item 1</li>
+                        <li class="list-group-item">Item 2</li>
+                        <li class="list-group-item">Item 3</li>
+                        <li class="list-group-item">Item 1</li>
+                        <li class="list-group-item">Item 2</li>
+                        <li class="list-group-item">Item 3</li>
+                    </ul>
     			</div>
     			<div class="modal-footer">
     				<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -51,6 +60,8 @@
     		</div><!-- /.modal-content -->
     	</div><!-- /.modal-dialog -->
     </div><!-- /.modal -->
+    
+
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
